# gmail-cleanup

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  cleanup.py  pyproject.toml  requirements.txt  setup.sh
.claude/commands/: gmail-cleanup.md
.github/workflows/: ci.yml  publish.yml
docs/: demo.sh  demo.tape
src/gmail_cleanup/: auth.py  cli.py  gmail_ops.py  heuristics.py  history.py
